--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "elgato-streamdeck"
 description = "HidApi driver for Elgato Stream Decks"
 authors = ["TheJebForge"]
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 readme = "README.md"
 homepage = "https://github.com/streamduck-org"
@@ -11,10 +11,11 @@ license = "MPL-2.0"
 
 
 [dependencies]
-hidapi = "1.4.2"
+hidapi = "2.1.3"
 image = "0.24.4"
 tokio = { version = "1", optional = true }
 async-recursion = { version = "1.0.0", optional = true }
+serial_test = "1.0.0"
 
 [features]
 async = ["tokio", "tokio/sync", "tokio/rt", "tokio/time", "async-recursion"]
