--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,19 +2,20 @@
 name = "elgato-streamdeck"
 description = "HidApi driver for Elgato Stream Decks"
 authors = ["TheJebForge"]
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 readme = "README.md"
 homepage = "https://github.com/streamduck-org"
 repository = "https://github.com/streamduck-org/elgato-streamdeck"
 license = "MPL-2.0"
 
-
 [dependencies]
 hidapi = "2.1.3"
 image = "0.24.4"
 tokio = { version = "1", optional = true }
 async-recursion = { version = "1.0.0", optional = true }
+
+[dev-dependencies]
 serial_test = "1.0.0"
 
 [features]
