Add simple example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ license = "MPL-2.0"
 
 [dependencies]
 hidapi = { version = "2.4", default-features = false }
-image = { version = "0.24.6", default-features = false, features = ["bmp", "jpeg"] }
+image = { version = "0.24.6", default-features = false, features = [
+  "bmp",
+  "jpeg",
+] }
 tokio = { version = "1", optional = true }
 async-recursion = { version = "1.0.2", optional = true }
 
@@ -19,7 +22,13 @@ async-recursion = { version = "1.0.2", optional = true }
 serial_test = "2.0.0"
 
 [features]
-async = ["tokio", "tokio/sync", "tokio/rt-multi-thread", "tokio/time", "async-recursion"]
+async = [
+  "tokio",
+  "tokio/sync",
+  "tokio/rt-multi-thread",
+  "tokio/time",
+  "async-recursion",
+]
 
 [package.metadata.docs.rs]
 all-features = true
