--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,13 @@ image = { version = "0.25.4", default-features = false, features = [
   "jpeg",
 ] }
 tokio = { version = "1", optional = true }
-async-recursion = { version = "1.1.1", optional = true }
 
 [features]
 async = [
   "tokio",
   "tokio/sync",
   "tokio/rt-multi-thread",
-  "tokio/time",
-  "async-recursion",
+  "tokio/time"
 ]
 
 [package.metadata.docs.rs]
