--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "elgato-streamdeck"
 description = "HidApi driver for Elgato Stream Decks"
 authors = ["TheJebForge"]
-version = "0.8.0"
+version = "0.9.0"
 edition = "2021"
 readme = "README.md"
 homepage = "https://github.com/streamduck-org"
@@ -23,6 +23,12 @@ async = [
   "tokio/sync",
   "tokio/rt-multi-thread",
   "tokio/time"
+]
+default-hidapi-backends = [
+  "hidapi/windows-native",
+  "hidapi/macos-shared-device",
+  "hidapi/linux-static-hidraw",
+  "hidapi/illumos-static-libusb"
 ]
 
 [package.metadata.docs.rs]
