Support Ajazz AKP153R

--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -3,7 +3,7 @@ name = "simple"
 edition = "2021"
 
 [dependencies]
-hidapi = { version = "2.6", default-features = false }
+hidapi = { version = "2.6", default-features = true }
 image = { version = "0.25.1", default-features = false, features = [
   "bmp",
   "jpeg",
