refactor: make examples into proper Cargo examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ async = [
   "tokio/time"
 ]
 
+[dev-dependencies]
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
+
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
