--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
 name = "elgato-streamdeck"
-description = "HidApi driver for Elgato Stream Decks"
-authors = ["TheJebForge"]
-version = "0.10.2"
-edition = "2021"
-readme = "README.md"
-homepage = "https://github.com/streamduck-org"
-repository = "https://github.com/streamduck-org/elgato-streamdeck"
+description = "HidApi driver for Elgato Stream Deck devices"
+authors = ["TheJebForge", "nekename"]
+version = "0.11.0"
+edition = "2024"
+repository = "https://github.com/OpenActionAPI/rust-elgato-streamdeck"
 license = "MPL-2.0"
 
 [dependencies]
 hidapi = "2.6"
-image = { version = "0.25.5", default-features = false, features = [
+image = { version = "0.25", default-features = false, features = [
   "bmp",
   "jpeg",
 ] }
